# metadata_driven_v3

./: .env.example  .gitignore  LLM_IN_LOOP_VALIDATION_GUIDE.md  README.md  app.py  pyproject.toml
api_test/: 00_langflow_api_test_component.py  README.md  local_api_test.py
docs/: DATA_RETRIEVAL_SOURCES.md  ENVIRONMENT_SETUP.md  LANGFLOW_IMPLEMENTATION_GUIDE.md  LANGFLOW_NODE_CONNECTION_GUIDE.md  METADATA_AUTHORING_FLOW_GUIDE.md  MONGODB_JSON_UPLOAD_GUIDE.md  ROUTED_RUN_FLOW_SESSION_WIRING_GUIDE.md  SERVICE_READINESS_AUDIT.md  WEB_IMPLEMENTATION_GUIDE.md
langflow_components/: README.md
metadata/: domain_items.json  domain_items_with_registration_trace.json  main_flow_filters.json  main_flow_filters_with_registration_trace.json  regression_questions.json  table_catalog.json  table_catalog_with_registration_trace.json
reference_runtime/: __init__.py  agent.py  analysis.py  answer.py  dummy_data.py  metadata.py  planner.py  retrieval.py  source_retrievers.py
sample_data/: capacity.json  equipment_status.json  hold_history.json  lot_status.json  production.json  production_today.json  target.json  wip.json  wip_today.json
tests/: conftest.py  test_component_contracts.py  test_langflow_component_shape.py  test_langflow_llm_node_flow.py  test_llm_validation_script.py  test_main_flow_api_response_builder.py  test_metadata_authoring_flows.py  test_metadata_context_loader_mongodb.py  test_metadata_qa_flow.py  test_metadata_text_input_examples.py  test_mongodb_result_store_flow.py  test_mongodb_upload.py  test_pandas_executor_guards.py  test_prompt_language_guides.py  (+12 more)
(+176 files in other folders)
